--- a/homework5/homework5.html
+++ b/homework5/homework5.html
@@ -3,9 +3,13 @@
     <head>
         <title>Sneakers which will change your next step making it more sustainable, animal friendly, conscious</title>
         <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header class="header">
+            <div class="responcive_header">
+                <p class="text1">MENU</p>
+            </div>
             <img class="logo" src="./images/logo.png" alt="logo">
             <ul class="menu">
                 <li class="menu_item"><img src="./images/search.png"></li>
@@ -14,10 +18,12 @@
                 <li class="menu_item">CART</li>
                 <li class="menu_item"><img src="./images/Vector.png"></li>
             </ul>
+            <div class="responcive_header">
+                <p class="text1">CART</p>
+            </div>
         </header>
         <section>
             <div class="image_group">
-        
             <img class="shoes" src="./images/3fcd509a51bc0adc99a322107f53a9ce_original-removebg-preview1.png" alt="">
             <div class="big_text"><h1>Sneakers which will change your next step making it more sustainable, animal friendly, conscious</h1>
             </div>    
